Fix tile z-index in rack

--- a/packages/scrabble-solver/src/components/Rack/Rack.module.scss
+++ b/packages/scrabble-solver/src/components/Rack/Rack.module.scss
@@ -11,6 +11,6 @@
   --background-color: var(--color--background);
 
   &:focus-within {
-    z-index: 1;
+    z-index: 2;
   }
 }
